--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -62,9 +62,6 @@ body {
 	.n-item.border-bottom {
 		border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important;
 	}
-	.btn-clear {
-		color: var(--color-inverse-1);
-	}
 
 	.btn-light {
 		//$background, $border, $hover-background: darken($background, 7.5%),
@@ -258,6 +255,10 @@ button:focus {
 .btn-clear {
 	background-color: none;
 	border: none;
+	color: var(--color-inverse-1);
+	&[disabled] {
+		opacity: 0.2;
+	}
 }
 .btn-square {
 	border-radius: 0 !important;
