--- a/public/main.css
+++ b/public/main.css
@@ -7288,6 +7288,9 @@ button:focus {
 .btn-square {
   border-radius: 0 !important; }
 
+.bg-faded {
+  background-color: var(--color-faded) !important; }
+
 .btn {
   display: inline-flex;
   align-items: center;
