--- a/public/main.css
+++ b/public/main.css
@@ -7099,6 +7099,29 @@ body {
   --color-faded-3: rgba(0, 0, 0, 0.4);
   --color-full-screen: rgba(0, 0, 0, 0.7); }
 
+body .main-content:before {
+  bottom: -50px;
+  left: 0;
+  right: 0;
+  content: '';
+  transition: all 0.2s ease-in-out;
+  position: fixed;
+  background-color: transparent; }
+
+body.offline .main-content:before {
+  transition: all 0.2s ease-in-out;
+  content: 'No internet connection';
+  position: fixed;
+  bottom: 50px !important;
+  left: 0;
+  right: 0;
+  background-color: var(--color-red);
+  color: #fff;
+  text-align: center;
+  font-size: 9px;
+  padding: 2px 10px;
+  z-index: 2000; }
+
 body.dark {
   --color-darkest: #000;
   --color-bg: #1d1d1d;
