--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -7199,6 +7200,39 @@ body.dark {
   border-radius: 12px;
   padding-left: 1rem;
   padding-right: 1rem; }
+
+.btn-content {
+  flex-direction: column;
+  position: relative;
+  padding: 12px 12px 16px;
+  margin: 10px;
+  border: solid 1px var(--color-solid);
+  color: var(--color-solid);
+  transition: all 0.2s ease-in-out; }
+  .btn-content:hover {
+    color: var(--color-solid);
+    transform: scale(1.12); }
+  .btn-content .n-text.lg {
+    font-weight: bold;
+    font-size: 1rem !important;
+    margin-bottom: 2px; }
+  .btn-content .n-text.sm {
+    font-weight: 300;
+    opacity: 0.7; }
+  .btn-content.active {
+    border: none;
+    background-color: var(--color-primary-bright);
+    color: #fff; }
+    .btn-content.active:after {
+      position: absolute;
+      content: '✓';
+      top: -12px;
+      left: -12px;
+      width: 24px;
+      height: 24px;
+      background-color: var(--color-primary-bright);
+      border-radius: 12px;
+      box-shadow: 0px 4px 10px rgba(32, 105, 157, 0.3); }
 
 .btn-icon {
   font-size: 33px;
