--- a/public/main.css
+++ b/public/main.css
@@ -7098,7 +7098,8 @@ body {
   --color-faded-1: rgba(0, 0, 0, 0.1);
   --color-faded-2: rgba(0, 0, 0, 0.2);
   --color-faded-3: rgba(0, 0, 0, 0.4);
-  --color-full-screen: rgba(0, 0, 0, 0.7); }
+  --color-full-screen: rgba(0, 0, 0, 0.7);
+  --color-background-selected: rgba(32, 105, 157, 0.1); }
 
 body .main-content:before {
   bottom: -50px;
@@ -7139,7 +7140,8 @@ body.dark {
   --color-faded-1: rgba(255, 255, 255, 0.1);
   --color-faded-2: rgba(255, 255, 255, 0.2);
   --color-faded-3: rgba(255, 255, 255, 0.4);
-  --color-full-screen: rgba(63, 62, 62, 0.8); }
+  --color-full-screen: rgba(63, 62, 62, 0.8);
+  --color-background-selected: rgba($primaryBright, 0.4); }
   body.dark .n-item.border-bottom {
     border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important; }
   body.dark .btn-light {
@@ -7367,7 +7369,7 @@ button:focus {
   flex-shrink: 0; }
 
 .bg-selected {
-  background-color: rgba(49, 158, 215, 0.2); }
+  background-color: var(--color-background-selected) !important; }
 
 .bg-light {
   background-color: var(--color-solid) !important; }
