--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,6 +39,38 @@ body {
 	--color-faded-2: rgba(0, 0, 0, 0.2);
 	--color-faded-3: rgba(0, 0, 0, 0.4);
 	--color-full-screen: rgba(0, 0, 0, 0.7);
+	--color-background-selected: #{rgba($primary, 0.1)};
+}
+
+@mixin darkmode {
+	--color-darkest: #000;
+	--color-bg: #1d1d1d;
+	--color-solid: #000;
+	--color-solid-1: #222;
+	--color-solid-2: #333;
+	--color-solid-3: #444;
+	--color-inverse: #fff;
+	--color-inverse-1: #eee;
+	--color-inverse-2: #ccc;
+	--color-inverse-3: #666;
+	--color-tabs: #000;
+	--color-faded: rgba(255, 255, 255, 0.6);
+	--color-faded-1: rgba(255, 255, 255, 0.1);
+	--color-faded-2: rgba(255, 255, 255, 0.2);
+	--color-faded-3: rgba(255, 255, 255, 0.4);
+	--color-full-screen: rgba(63, 62, 62, 0.8);
+	--color-background-selected: rgba($primaryBright, 0.4);
+
+	.n-item.border-bottom {
+		border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important;
+	}
+
+	.btn-light {
+		//$background, $border, $hover-background: darken($background, 7.5%),
+		// $hover-border: darken($border, 10%),
+		// $active-background: darken($background, 10%), $active-border: darken($border, 12.5%)
+		@include button-variant(#333, darken(#333, 5%), darken(#333, 5%), darken(#333, 5%), rgba($primaryBright, 5%));
+	}
 }
 
 body {
@@ -70,36 +102,6 @@ body.offline {
 			padding: 2px 10px;
 			z-index: 2000;
 		}
-	}
-}
-
-@mixin darkmode {
-	--color-darkest: #000;
-	--color-bg: #1d1d1d;
-	--color-solid: #000;
-	--color-solid-1: #222;
-	--color-solid-2: #333;
-	--color-solid-3: #444;
-	--color-inverse: #fff;
-	--color-inverse-1: #eee;
-	--color-inverse-2: #ccc;
-	--color-inverse-3: #666;
-	--color-tabs: #000;
-	--color-faded: rgba(255, 255, 255, 0.6);
-	--color-faded-1: rgba(255, 255, 255, 0.1);
-	--color-faded-2: rgba(255, 255, 255, 0.2);
-	--color-faded-3: rgba(255, 255, 255, 0.4);
-	--color-full-screen: rgba(63, 62, 62, 0.8);
-
-	.n-item.border-bottom {
-		border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important;
-	}
-
-	.btn-light {
-		//$background, $border, $hover-background: darken($background, 7.5%),
-		// $hover-border: darken($border, 10%),
-		// $active-background: darken($background, 10%), $active-border: darken($border, 12.5%)
-		@include button-variant(#333, darken(#333, 5%), darken(#333, 5%), darken(#333, 5%), rgba($primaryBright, 5%));
 	}
 }
 
@@ -361,7 +363,7 @@ button:focus {
 }
 
 .bg-selected {
-	background-color: rgba($primaryBright, 0.2);
+	background-color: var(--color-background-selected) !important;
 }
 
 .bg-light {
