--- a/public/main.css
+++ b/public/main.css
@@ -7072,7 +7072,8 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-size: 18px; }
+  font-size: 18px;
+  background-color: var(--color-solid); }
 
 body.no-scroll {
   overflow: hidden;
