--- a/public/main.css
+++ b/public/main.css
@@ -7175,6 +7175,32 @@ body.dark {
       body.dark .btn-light:not(:disabled):not(.disabled):active:focus, body.dark .btn-light:not(:disabled):not(.disabled).active:focus,
       .show > body.dark .btn-light.dropdown-toggle:focus {
         box-shadow: 0 0 0 0.2rem rgba(71, 71, 71, 0.5); }
+    body.dark .btn-light:hover {
+      color: #fff;
+      background-color: #333;
+      border-color: #1a1a1a; }
+      body.dark .btn-light:hover:hover {
+        color: #fff;
+        background-color: #1a1a1a;
+        border-color: #1a1a1a; }
+      body.dark .btn-light:hover:focus, body.dark .btn-light:hover.focus {
+        box-shadow: 0 0 0 0.2rem rgba(60, 60, 60, 0.5); }
+      body.dark .btn-light:hover.disabled, body.dark .btn-light:hover:disabled {
+        color: #fff;
+        background-color: #333;
+        border-color: #1a1a1a; }
+      body.dark .btn-light:hover:not(:disabled):not(.disabled):active, body.dark .btn-light:hover:not(:disabled):not(.disabled).active,
+      .show > body.dark .btn-light:hover.dropdown-toggle {
+        color: #fff;
+        background-color: #319ed7;
+        border-color: black; }
+        body.dark .btn-light:hover:not(:disabled):not(.disabled):active:focus, body.dark .btn-light:hover:not(:disabled):not(.disabled).active:focus,
+        .show > body.dark .btn-light:hover.dropdown-toggle:focus {
+          box-shadow: 0 0 0 0.2rem rgba(60, 60, 60, 0.5); }
+  body.dark .form-control {
+    background-color: var(--color-solid);
+    border-color: var(--color-solid-1);
+    color: var(--color-inverse-2); }
 
 .full-screen {
   background-color: var(--color-faded-3);
@@ -7210,7 +7236,8 @@ body.dark {
 .btn {
   border-radius: 12px;
   padding-left: 1rem;
-  padding-right: 1rem; }
+  padding-right: 1rem;
+  transition: all 0.2s ease-in-out; }
 
 .btn-content {
   flex-direction: column;
