--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -187,6 +187,53 @@ body.dark {
 	transition: all 0.2s ease-in-out;
 }
 
+.mini-map {
+	position: fixed;
+	bottom: 70px;
+	right: 26px;
+	height: 100px;
+	width: 180px;
+
+	@media (max-width: 320px) {
+		height: 80px;
+		width: 140px;
+	}
+
+	border-radius: 20px;
+	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+	border: solid 1px var(--color-faded-1);
+	background-color: var(--color-solid);
+	overflow: hidden;
+
+	.leaflet-top,
+	.location-name,
+	.leaflet-bottom {
+		display: none;
+	}
+	.n-map-container {
+		z-index: 10;
+	}
+	transition: all 0.2s ease-in-out;
+	&.opened {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		color: var(--color-inverse);
+		height: 60px;
+		width: 120px;
+		z-index: 2000;
+	}
+	&::after {
+		content: '';
+		z-index: 20;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+	}
+}
+
 .btn-content {
 	flex-direction: column;
 	position: relative;
