--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -211,6 +211,7 @@ body.dark {
 		display: none;
 	}
 	.n-map-container {
+		background-color: var(--color-solid);
 		z-index: 10;
 	}
 	transition: all 0.2s ease-in-out;
