--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -187,6 +187,25 @@ body.dark {
 	transition: all 0.2s ease-in-out;
 }
 
+body.scrolling {
+	.mini-map {
+		opacity: 0.3;
+	}
+}
+
+.input-model {
+	&.type-range {
+		.keypad-holder {
+			display: none;
+		}
+	}
+	&.type-value {
+		.tracker-input.slider {
+			display: none;
+		}
+	}
+}
+
 .mini-map {
 	position: fixed;
 	bottom: 70px;
