--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -180,6 +180,9 @@ body.dark {
 	padding-left: 1rem;
 	padding-right: 1rem;
 	transition: all 0.2s ease-in-out;
+	&.btn-round {
+		border-radius: 30px !important;
+	}
 }
 
 body.scrolling {
