--- a/public/main.css
+++ b/public/main.css
@@ -1,31 +1,4 @@
 @charset "UTF-8";
-.n-board-tabs {
-  background-color: var(--color-solid);
-  border-bottom: solid 1px var(--color-solid-2);
-  width: 100%;
-  min-height: 50px;
-  overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
-  height: 50px; }
-  .n-board-tabs .mask {
-    padding-left: 10px;
-    height: 100%;
-    width: fit-content;
-    display: flex;
-    align-content: center; }
-  .n-board-tabs .tab {
-    color: var(--color-inverse-2);
-    border: none;
-    background: transparent;
-    padding: 4px 6px;
-    min-width: 40px;
-    max-width: 200px;
-    width: auto;
-    flex-shrink: 0;
-    height: 50px; }
-    .n-board-tabs .tab.active {
-      border-bottom: solid 2px var(--color-inverse); }
-
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -7225,6 +7198,139 @@ body.dark {
         .show > body.dark .btn-light:hover.dropdown-toggle:focus {
           box-shadow: 0 0 0 0.2rem rgba(60, 60, 60, 0.5); }
 
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden !important;
+  display: block; }
+
+.truncate-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden !important;
+  display: -webkit-box; }
+
+.text-primary-bright {
+  color: #319ed7 !important; }
+
+.text-red {
+  color: #e94151 !important; }
+
+.text-green {
+  color: #38a83f !important; }
+
+.text-white {
+  color: #fff; }
+
+.font-120 {
+  font-size: 1.2rem; }
+
+.font-140 {
+  font-size: 1.4rem; }
+
+.text-faded {
+  color: var(--color-faded); }
+
+input[type='text'],
+input[type='number'],
+input[type='password'] {
+  background-color: var(--color-faded-1);
+  border-color: var(--color-solid-1);
+  color: var(--color-inverse-2);
+  border: none;
+  font-size: 1rem;
+  border-radius: 0.4rem;
+  padding: 6px;
+  color: var(--color-inverse); }
+  input[type='text']:focus,
+  input[type='number']:focus,
+  input[type='password']:focus {
+    background-color: var(--color-faded-1);
+    color: var(--color-inverse); }
+
+select {
+  -webkit-appearance: none;
+  background-color: var(--color-solid-1) !important;
+  color: var(--color-inverse) !important;
+  border: solid 1px var(--color-solid) !important; }
+
+.input-group {
+  border: none;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: stretch; }
+  .input-group .form-control {
+    margin-top: 0; }
+  .input-group .input-group-text {
+    border: none;
+    background-color: var(--color-faded); }
+
+.input-group-prepend .input-group-prepend .input-group-text::after {
+  content: normal;
+  border-right: solid 1px rgba(0, 0, 0, 0.4);
+  display: block;
+  padding-left: 6px;
+  padding-right: 6px; }
+
+.search-input {
+  border-radius: 20px;
+  padding: 0px 16px;
+  height: 36px;
+  border: solid 1px transparent;
+  background-color: var(--color-faded);
+  color: var(--color-inverse-2);
+  flex-grow: 1;
+  outline: none;
+  transition: all 0.2s ease-in-out; }
+  .search-input:focus {
+    border: solid 1px rgba(0, 0, 0, 0.2);
+    background-color: var(--color-faded-2); }
+
+.justify-content-stretch {
+  justify-content: stretch; }
+
+.flex-grow {
+  flex-grow: 1; }
+
+.flex-shrink {
+  flex-shrink: 1; }
+
+.flex-grow-off {
+  flex-grow: 0; }
+
+.flex-shrink-off {
+  flex-shrink: 0; }
+
+.n-board-tabs {
+  background-color: var(--color-solid);
+  border-bottom: solid 1px var(--color-solid-2);
+  width: 100%;
+  min-height: 50px;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+  height: 50px; }
+  .n-board-tabs .mask {
+    padding-left: 10px;
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    align-content: center; }
+  .n-board-tabs .tab {
+    color: var(--color-inverse-2);
+    border: none;
+    background: transparent;
+    padding: 4px 6px;
+    min-width: 40px;
+    max-width: 200px;
+    width: auto;
+    flex-shrink: 0;
+    height: 50px; }
+    .n-board-tabs .tab.active {
+      border-bottom: solid 2px var(--color-inverse); }
+
 .full-screen {
   background-color: var(--color-faded-3);
   z-index: 2000;
@@ -7242,36 +7348,123 @@ body.dark {
     transform: scale(1.3);
     pointer-events: none; }
 
-.truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden !important;
-  display: block; }
-
-.truncate-2 {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden !important;
-  display: -webkit-box; }
-
 .btn {
   border-radius: 12px;
   padding-left: 1rem;
   padding-right: 1rem;
-  transition: all 0.2s ease-in-out; }
+  transition: all 0.2s ease-in-out;
+  display: inline-flex;
+  align-items: center;
+  vertical-align: middle;
+  justify-content: center; }
   .btn.btn-round {
     border-radius: 30px !important; }
 
+button:focus {
+  outline: 0 !important; }
+
+.btn-primary {
+  background-color: #319ed7; }
+  .btn-primary:hover {
+    background-color: #2381b2; }
+
+.btn-outline-dark {
+  border-color: var(--color-solid-2) !important; }
+
+.btn-light {
+  background-color: #e9e9e9; }
+  .btn-light:hover {
+    background-color: #dfdfdf; }
+
+.btn-white-pop {
+  color: #319ed7 !important;
+  box-shadow: 0px 1px 5px rgba(49, 158, 215, 0.2);
+  border-color: var(--color-solid-2);
+  background-color: var(--color-faded); }
+  .btn-white-pop.inactive {
+    box-shadow: none;
+    background-color: var(--color-solid);
+    color: var(--color-inverse-2) !important;
+    border-color: var(--color-solid-2);
+    opacity: 0.7; }
+
+.btn-content {
+  flex-direction: column;
+  position: relative;
+  padding: 12px 12px 16px;
+  margin: 10px;
+  border: solid 1px var(--color-solid);
+  color: var(--color-solid);
+  transition: all 0.2s ease-in-out; }
+  .btn-content:hover {
+    color: var(--color-solid);
+    transform: scale(1.12); }
+  .btn-content .n-text.lg {
+    font-weight: bold;
+    font-size: 1rem !important;
+    margin-bottom: 2px; }
+  .btn-content .n-text.sm {
+    font-weight: 300;
+    opacity: 0.7; }
+  .btn-content.active {
+    border: none;
+    background-color: var(--color-primary-bright);
+    color: #fff; }
+    .btn-content.active:after {
+      position: absolute;
+      content: '✓';
+      top: -12px;
+      left: -12px;
+      width: 24px;
+      height: 24px;
+      background-color: var(--color-primary-bright);
+      border-radius: 12px;
+      box-shadow: 0px 4px 10px rgba(32, 105, 157, 0.3); }
+
+.btn-icon {
+  font-size: 33px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+.btn-primary {
+  background-color: #319ed7; }
+  .btn-primary:hover {
+    background-color: #2381b2; }
+
+.btn-light {
+  background-color: #e9e9e9; }
+  .btn-light:hover {
+    background-color: black; }
+
+.btn-group {
+  background-color: var(--color-solid-1);
+  padding: 2px;
+  border-radius: 12px; }
+  .btn-group .btn {
+    background: transparent !important;
+    border: none;
+    transition: all 0.2s ease-in-out;
+    color: var(--color-inverse); }
+    .btn-group .btn.active {
+      background-color: var(--color-solid) !important;
+      border-radius: 10px !important;
+      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14); }
+
+.btn-clear {
+  background-color: none;
+  border: none;
+  color: var(--color-inverse-1); }
+  .btn-clear[disabled] {
+    opacity: 0.2; }
+
+.btn-square {
+  border-radius: 0 !important; }
+
+.bg-faded {
+  background-color: var(--color-faded) !important; }
+
 body.scrolling .mini-map {
   opacity: 0.3; }
-
-.input-model.type-range .keypad-holder {
-  display: none; }
-
-.input-model.type-value .tracker-input.slider {
-  display: none; }
 
 .mini-map {
   position: fixed;
@@ -7314,197 +7507,16 @@ body.scrolling .mini-map {
     right: 0;
     bottom: 0; }
 
-.btn-content {
-  flex-direction: column;
-  position: relative;
-  padding: 12px 12px 16px;
-  margin: 10px;
-  border: solid 1px var(--color-solid);
-  color: var(--color-solid);
-  transition: all 0.2s ease-in-out; }
-  .btn-content:hover {
-    color: var(--color-solid);
-    transform: scale(1.12); }
-  .btn-content .n-text.lg {
-    font-weight: bold;
-    font-size: 1rem !important;
-    margin-bottom: 2px; }
-  .btn-content .n-text.sm {
-    font-weight: 300;
-    opacity: 0.7; }
-  .btn-content.active {
-    border: none;
-    background-color: var(--color-primary-bright);
-    color: #fff; }
-    .btn-content.active:after {
-      position: absolute;
-      content: '✓';
-      top: -12px;
-      left: -12px;
-      width: 24px;
-      height: 24px;
-      background-color: var(--color-primary-bright);
-      border-radius: 12px;
-      box-shadow: 0px 4px 10px rgba(32, 105, 157, 0.3); }
-
-.btn-icon {
-  font-size: 33px;
-  padding-left: 10px;
-  padding-right: 10px; }
-
-.text-red {
-  color: #e94151 !important; }
-
-.text-green {
-  color: #38a83f !important; }
-
-.btn-primary {
-  background-color: #319ed7; }
-  .btn-primary:hover {
-    background-color: #2381b2; }
-
-.btn-light {
-  background-color: #e9e9e9; }
-  .btn-light:hover {
-    background-color: black; }
-
-.btn-group {
-  background-color: var(--color-solid-1);
-  padding: 2px;
-  border-radius: 12px; }
-  .btn-group .btn {
-    background: transparent !important;
-    border: none;
-    transition: all 0.2s ease-in-out;
-    color: var(--color-inverse); }
-    .btn-group .btn.active {
-      background-color: var(--color-solid) !important;
-      border-radius: 10px !important;
-      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14); }
-
-.text-white {
-  color: #fff; }
-
-input[type='text'],
-input[type='number'],
-input[type='password'] {
-  background-color: var(--color-faded-1);
-  border-color: var(--color-solid-1);
-  color: var(--color-inverse-2);
-  border: none;
-  font-size: 1rem;
-  border-radius: 0.4rem;
-  padding: 6px;
-  color: var(--color-inverse); }
-  input[type='text']:focus,
-  input[type='number']:focus,
-  input[type='password']:focus {
-    background-color: var(--color-faded-1);
-    color: var(--color-inverse); }
-
-select {
-  -webkit-appearance: none;
-  background-color: var(--color-solid-1) !important;
-  color: var(--color-inverse) !important;
-  border: solid 1px var(--color-solid) !important; }
-
-.n-item select,
-.n-item input {
-  margin: 6px 0; }
-
-.input-group {
-  border: none;
+.n-row {
   display: flex;
   flex-direction: row;
-  align-items: stretch;
-  justify-content: stretch; }
-  .input-group .form-control {
-    margin-top: 0; }
-  .input-group .input-group-text {
-    border: none;
-    background-color: var(--color-faded); }
-
-.input-group-prepend .input-group-prepend .input-group-text::after {
-  content: normal;
-  border-right: solid 1px rgba(0, 0, 0, 0.4);
-  display: block;
-  padding-left: 6px;
-  padding-right: 6px; }
-
-.border-bottom {
-  border-color: var(--color-faded-2) !important; }
-
-button:focus {
-  outline: 0 !important; }
-
-.container-sm {
-  max-width: 800px; }
-
-.click-thru {
-  display: block;
-  width: 100%;
-  border: none;
-  background: none;
-  -webkit-appearance: none;
-  padding: 0;
-  margin: 0; }
-
-.justify-content-stretch {
-  justify-content: stretch; }
-
-.btn-clear {
-  background-color: none;
-  border: none;
-  color: var(--color-inverse-1); }
-  .btn-clear[disabled] {
-    opacity: 0.2; }
-
-.btn-square {
-  border-radius: 0 !important; }
-
-.bg-faded {
-  background-color: var(--color-faded) !important; }
-
-.btn {
-  display: inline-flex;
   align-items: center;
-  vertical-align: middle;
-  justify-content: center; }
-
-.flex-grow {
-  flex-grow: 1; }
-
-.flex-shrink {
+  justify-content: space-between;
+  width: 100%;
+  flex-grow: 1;
   flex-shrink: 1; }
-
-.flex-grow-off {
-  flex-grow: 0; }
-
-.flex-shrink-off {
-  flex-shrink: 0; }
-
-.bg-selected {
-  background-color: var(--color-background-selected) !important; }
-
-.bg-light {
-  background-color: var(--color-solid) !important; }
-
-.n-item.bg-light {
-  background-color: var(--color-bg) !important; }
-  .n-item.bg-light.text-faded {
-    color: var(--color-inverse-3) !important; }
-
-.btn-white-pop {
-  color: #319ed7 !important;
-  box-shadow: 0px 1px 5px rgba(49, 158, 215, 0.2);
-  border-color: var(--color-solid-2);
-  background-color: var(--color-faded); }
-  .btn-white-pop.inactive {
-    box-shadow: none;
-    background-color: var(--color-solid);
-    color: var(--color-inverse-2) !important;
-    border-color: var(--color-solid-2);
-    opacity: 0.7; }
+  .n-row.stretch {
+    justify-content: stretch; }
 
 .empty-notice {
   display: flex;
@@ -7538,11 +7550,46 @@ button:focus {
   .n-list .n-pop {
     border-radius: 0 !important; } }
 
-.font-120 {
-  font-size: 1.2rem; }
+.n-item-divider {
+  min-height: 60px !important;
+  align-items: flex-end !important;
+  padding-bottom: 10px !important; }
+  .n-item-divider.border-bottom {
+    border-bottom-color: var(--color-faded) !important; }
+  .n-item-divider.compact {
+    min-height: 30px !important; }
 
-.font-140 {
-  font-size: 1.4rem; }
+.border-bottom {
+  border-color: var(--color-faded-2) !important; }
+
+.bg-selected {
+  background-color: var(--color-background-selected) !important; }
+
+.bg-light {
+  background-color: var(--color-solid) !important; }
+
+.input-model.type-range .keypad-holder {
+  display: none; }
+
+.input-model.type-value .tracker-input.slider {
+  display: none; }
+
+.container-sm {
+  max-width: 800px; }
+
+.click-thru {
+  display: block;
+  width: 100%;
+  border: none;
+  background: none;
+  -webkit-appearance: none;
+  padding: 0;
+  margin: 0; }
+
+.n-item.bg-light {
+  background-color: var(--color-bg) !important; }
+  .n-item.bg-light.text-faded {
+    color: var(--color-inverse-3) !important; }
 
 .n-title, .n-item-divider .main,
 .n-item-divider .n-text {
@@ -7558,66 +7605,8 @@ button:focus {
     line-height: 0.75rem;
     opacity: 0.8; }
 
-.n-item-divider {
-  min-height: 60px !important;
-  align-items: flex-end !important;
-  padding-bottom: 10px !important; }
-  .n-item-divider.border-bottom {
-    border-bottom-color: var(--color-faded) !important; }
-  .n-item-divider.compact {
-    min-height: 30px !important; }
-
-.search-input {
-  border-radius: 20px;
-  padding: 0px 16px;
-  height: 36px;
-  border: solid 1px transparent;
-  background-color: var(--color-faded);
-  color: var(--color-inverse-2);
-  flex-grow: 1;
-  outline: none;
-  transition: all 0.2s ease-in-out; }
-  .search-input:focus {
-    border: solid 1px rgba(0, 0, 0, 0.2);
-    background-color: var(--color-faded-2); }
-
-.text-primary-bright {
-  color: #319ed7 !important; }
-
-.n-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  flex-grow: 1;
-  flex-shrink: 1; }
-  .n-row.stretch {
-    justify-content: stretch; }
-
-.btn {
-  border-radius: 12px;
-  padding-left: 1rem;
-  padding-right: 1rem; }
-
 .card {
   border-radius: 1rem; }
-
-button:focus {
-  outline: 0 !important; }
-
-.btn-primary {
-  background-color: #319ed7; }
-  .btn-primary:hover {
-    background-color: #2381b2; }
-
-.btn-outline-dark {
-  border-color: var(--color-solid-2) !important; }
-
-.btn-light {
-  background-color: #e9e9e9; }
-  .btn-light:hover {
-    background-color: #dfdfdf; }
 
 .mw-500px {
   max-width: 500px !important; }
@@ -7669,9 +7658,6 @@ button {
 
 .justify-content-between {
   justify-content: space-between; }
-
-.text-faded {
-  color: rgba(0, 0, 0, 0.43) !important; }
 
 .page {
   flex-grow: 1;
