--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,195 +1,30 @@
+// Variables and mixins
 @import './utils/_utils';
-@import './components/board-tabs.scss';
+
+// Vendors
 @import './vendor/bootstrap/bootstrap';
 
-html,
-body {
-	-webkit-user-select: none;
-	-webkit-touch-callout: none;
-	font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-	-webkit-text-size-adjust: auto;
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	font-size: 18px;
-	background-color: var(--color-solid);
-}
+// Base
+@import './base/reset';
+@import './base/body';
+@import './base/text';
+@import './base/forms';
+@import './base/flex';
 
-body.no-scroll {
-	overflow: hidden;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-}
-
-body {
-	--color-darkest: #fff;
-	--color-bg: #f9f9f9;
-	--color-inverse: #333;
-	--color-inverse-1: #555;
-	--color-inverse-2: #777;
-	--color-inverse-3: #999;
-	--color-solid: #fff;
-	--color-solid-1: #eee;
-	--color-solid-2: #ccc;
-	--color-solid-3: #666;
-	--color-primary: #20699d;
-	--color-primary-muted: #4d84a1;
-	--color-primary-dark: #1a212a;
-	--color-primary-faded: rgba(50, 159, 215, 0.45);
-	--color-primary-bright: #319ed7;
-	--color-orange: #ed9614;
-	--color-green: #38a83f;
-	--color-red: #e94151;
-	--color-tabs: var(--color-primary);
-	--color-faded: rgba(0, 0, 0, 0.06);
-	--color-faded-1: rgba(0, 0, 0, 0.1);
-	--color-faded-2: rgba(0, 0, 0, 0.2);
-	--color-faded-3: rgba(0, 0, 0, 0.4);
-	--color-full-screen: rgba(0, 0, 0, 0.7);
-	--color-background-selected: #{rgba($primary, 0.1)};
-}
-
-@mixin darkmode {
-	--color-darkest: #000;
-	--color-bg: #1d1d1d;
-	--color-solid: #000;
-	--color-solid-1: #222;
-	--color-solid-2: #333;
-	--color-solid-3: #444;
-	--color-inverse: #fff;
-	--color-inverse-1: #eee;
-	--color-inverse-2: #ccc;
-	--color-inverse-3: #666;
-	--color-tabs: #000;
-	--color-faded: rgba(255, 255, 255, 0.2);
-	--color-faded-1: rgba(255, 255, 255, 0.1);
-	--color-faded-2: rgba(255, 255, 255, 0.2);
-	--color-faded-3: rgba(255, 255, 255, 0.4);
-	--color-full-screen: rgba(63, 62, 62, 0.8);
-	--color-background-selected: rgba($primaryBright, 0.82);
-
-	.n-item.border-bottom {
-		border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important;
-	}
-
-	.btn-light {
-		//$background, $border, $hover-background: darken($background, 7.5%),
-		// $hover-border: darken($border, 10%),
-		// $active-background: darken($background, 10%), $active-border: darken($border, 12.5%)
-		@include button-variant(#333, darken(#333, 5%), darken(#333, 5%), darken(#333, 5%), rgba($primaryBright, 5%));
-		&:hover {
-			@include button-variant(
-				#333,
-				darken(#333, 10%),
-				darken(#333, 10%),
-				darken(#333, 10%),
-				rgba($primaryBright, 10%)
-			);
-		}
-	}
-}
-
-body {
-	.main-content {
-		&:before {
-			bottom: -50px;
-			left: 0;
-			right: 0;
-			content: '';
-			transition: all 0.2s ease-in-out;
-			position: fixed;
-			background-color: transparent;
-		}
-	}
-}
-body.offline {
-	.main-content {
-		&:before {
-			transition: all 0.2s ease-in-out;
-			content: 'No internet connection';
-			position: fixed;
-			bottom: 50px !important;
-			left: 0;
-			right: 0;
-			background-color: var(--color-red);
-			color: #fff;
-			text-align: center;
-			font-size: 9px;
-			padding: 2px 10px;
-			z-index: 2000;
-		}
-	}
-}
-
-body.dark {
-	@include darkmode();
-}
+// Components
+@import './components/board-tabs';
+@import './components/full-screen';
+@import './components/btn';
+@import './components/mini-map';
+@import './components/row';
+@import './components/empty-notice';
+@import './components/n-pop';
+@import './components/list-item';
 
 // TODO: Look at making prefers-color-scheme work properly - when enabled, only buttons change
 // @media (prefers-color-scheme: dark) {
 // 	@include darkmode();
 // }
-
-.full-screen {
-	background-color: var(--color-faded-3);
-	z-index: 2000;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transition: all 0.2s ease-in-out;
-	&.hidden {
-		opacity: 0;
-		transform: scale(1.3);
-		pointer-events: none;
-	}
-}
-
-@mixin truncate($lines: 1) {
-	@if ($lines == 1) {
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-		overflow: hidden !important;
-		display: block;
-	} @else {
-		display: -webkit-box;
-		-webkit-line-clamp: $lines;
-		-webkit-box-orient: vertical;
-		overflow: hidden !important;
-		display: -webkit-box;
-	}
-}
-
-.truncate {
-	@include truncate(1);
-}
-.truncate-2 {
-	@include truncate(2);
-}
-
-.btn {
-	border-radius: 12px;
-	padding-left: 1rem;
-	padding-right: 1rem;
-	transition: all 0.2s ease-in-out;
-	&.btn-round {
-		border-radius: 30px !important;
-	}
-}
-
-body.scrolling {
-	.mini-map {
-		opacity: 0.3;
-	}
-}
 
 .input-model {
 	&.type-range {
@@ -202,205 +37,6 @@ body.scrolling {
 			display: none;
 		}
 	}
-}
-
-.mini-map {
-	position: fixed;
-	bottom: 70px;
-	right: 26px;
-	height: 100px;
-	width: 180px;
-
-	@media (max-width: 320px) {
-		height: 80px;
-		width: 140px;
-	}
-
-	border-radius: 20px;
-	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-	border: solid 1px var(--color-faded-2);
-	background-color: var(--color-solid);
-	overflow: hidden;
-
-	.leaflet-top,
-	.location-name,
-	.leaflet-bottom {
-		display: none;
-	}
-	.n-map-container {
-		background-color: var(--color-solid);
-		z-index: 10;
-	}
-	transition: all 0.2s ease-in-out;
-	&.opened {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		color: var(--color-inverse);
-		height: 60px;
-		border-radius: 30px;
-		width: 120px;
-		z-index: 2000;
-	}
-	&::after {
-		content: '';
-		z-index: 20;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-	}
-}
-
-.btn-content {
-	flex-direction: column;
-	position: relative;
-	padding: 12px 12px 16px;
-	margin: 10px;
-	border: solid 1px var(--color-solid);
-	color: var(--color-solid);
-	transition: all 0.2s ease-in-out;
-	&:hover {
-		color: var(--color-solid);
-		transform: scale(1.12);
-	}
-	.n-text.lg {
-		font-weight: bold;
-		font-size: 1rem !important;
-		margin-bottom: 2px;
-	}
-	.n-text.sm {
-		font-weight: 300;
-		opacity: 0.7;
-	}
-	&.active {
-		border: none;
-		background-color: var(--color-primary-bright);
-		color: #fff;
-		&:after {
-			$height: 24px;
-			position: absolute;
-			content: '✓';
-			top: -#{$height * 0.5};
-			left: -#{$height * 0.5};
-			width: $height;
-			height: $height;
-			background-color: var(--color-primary-bright);
-			border-radius: $height * 0.5;
-			box-shadow: 0px 4px 10px rgba($primary, 0.3);
-		}
-	}
-}
-
-.btn-icon {
-	font-size: 33px;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-.text-red {
-	color: $red !important;
-}
-.text-green {
-	color: $green !important;
-}
-
-.btn-primary {
-	background-color: $primaryBright;
-	&:hover {
-		background-color: darken($primaryBright, 10%);
-	}
-}
-
-.btn-light {
-	background-color: darken($faded, 6%);
-	&:hover {
-		background-color: darken($faded, 100%);
-	}
-}
-
-.btn-group {
-	background-color: var(--color-solid-1);
-	padding: 2px;
-	border-radius: 12px;
-	.btn {
-		background: transparent !important;
-		border: none;
-		transition: all 0.2s ease-in-out;
-		color: var(--color-inverse);
-		&.active {
-			background-color: var(--color-solid) !important;
-			border-radius: 10px !important;
-			box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14);
-		}
-	}
-}
-
-.text-white {
-	color: #fff;
-}
-
-input[type='text'],
-input[type='number'],
-input[type='password'] {
-	background-color: var(--color-faded-1);
-	border-color: var(--color-solid-1);
-	color: var(--color-inverse-2);
-
-	border: none;
-	font-size: 1rem;
-	border-radius: 0.4rem;
-	padding: 6px;
-	color: var(--color-inverse);
-	&:focus {
-		background-color: var(--color-faded-1);
-		color: var(--color-inverse);
-	}
-}
-select {
-	-webkit-appearance: none;
-	background-color: var(--color-solid-1) !important;
-	color: var(--color-inverse) !important;
-	border: solid 1px var(--color-solid) !important;
-}
-.n-item {
-	select,
-	input {
-		margin: 6px 0;
-	}
-}
-
-.input-group {
-	border: none;
-
-	display: flex;
-	flex-direction: row;
-	align-items: stretch;
-	justify-content: stretch;
-	.form-control {
-		margin-top: 0;
-	}
-	.input-group-text {
-		border: none;
-		background-color: var(--color-faded);
-	}
-}
-
-.input-group-prepend .input-group-prepend .input-group-text::after {
-	content: normal;
-	border-right: solid 1px rgba(0, 0, 0, 0.4);
-	display: block;
-	padding-left: 6px;
-	padding-right: 6px;
-}
-
-.border-bottom {
-	border-color: var(--color-faded-2) !important;
-}
-
-button:focus {
-	outline: 0 !important;
 }
 
 .container-sm {
@@ -417,116 +53,11 @@ button:focus {
 	margin: 0;
 }
 
-.justify-content-stretch {
-	justify-content: stretch;
-}
-
-.btn-clear {
-	background-color: none;
-	border: none;
-	color: var(--color-inverse-1);
-	&[disabled] {
-		opacity: 0.2;
-	}
-}
-.btn-square {
-	border-radius: 0 !important;
-}
-
-.bg-faded {
-	background-color: var(--color-faded) !important;
-}
-
-.btn {
-	display: inline-flex;
-	align-items: center;
-	vertical-align: middle;
-	justify-content: center;
-}
-
-.flex-grow {
-	flex-grow: 1;
-}
-.flex-shrink {
-	flex-shrink: 1;
-}
-.flex-grow-off {
-	flex-grow: 0;
-}
-.flex-shrink-off {
-	flex-shrink: 0;
-}
-
-.bg-selected {
-	background-color: var(--color-background-selected) !important;
-}
-
-.bg-light {
-	background-color: var(--color-solid) !important;
-}
 .n-item.bg-light {
 	background-color: var(--color-bg) !important;
 	&.text-faded {
 		color: var(--color-inverse-3) !important;
 	}
-}
-
-.btn-white-pop {
-	color: $primaryBright !important;
-	box-shadow: 0px 1px 5px rgba($primaryBright, 0.2);
-	border-color: var(--color-solid-2);
-	background-color: var(--color-faded);
-	&.inactive {
-		box-shadow: none;
-		background-color: var(--color-solid);
-		color: var(--color-inverse-2) !important;
-		border-color: var(--color-solid-2);
-		opacity: 0.7;
-	}
-}
-
-.empty-notice {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-	width: 100%;
-	flex-grow: 1;
-	flex-shrink: 1;
-	font-size: 1.6rem;
-	font-weight: bold;
-	opacity: 0.4;
-	text-align: center;
-	line-height: 130%;
-	min-height: 80vh;
-	max-width: 80vw;
-	margin: 0 auto;
-	color: var(--color-inverse-2);
-	&.sm {
-		min-height: 120px;
-		height: 120px;
-		font-size: 1.3rem;
-	}
-}
-
-.n-pop {
-	border: none !important;
-	box-shadow: 0px 3px 4px -2px rgba(0, 0, 0, 0.03);
-	background-color: var(--color-solid);
-	border-radius: 0.9rem;
-}
-
-.n-list .n-pop {
-	@include media-breakpoint-down(sm) {
-		border-radius: 0 !important;
-	}
-}
-
-.font-120 {
-	font-size: 1.2rem;
-}
-.font-140 {
-	font-size: 1.4rem;
 }
 
 .n-title {
@@ -544,84 +75,8 @@ button:focus {
 	}
 }
 
-.n-item-divider {
-	min-height: 60px !important;
-	align-items: flex-end !important;
-	padding-bottom: 10px !important;
-	&.border-bottom {
-		border-bottom-color: var(--color-faded) !important;
-	}
-	&.compact {
-		min-height: 30px !important;
-	}
-	.main,
-	.n-text {
-		@extend .n-title;
-	}
-}
-
-.search-input {
-	border-radius: 20px;
-	padding: 0px 16px;
-	height: 36px;
-	border: solid 1px transparent;
-	background-color: var(--color-faded);
-	color: var(--color-inverse-2);
-	flex-grow: 1;
-	outline: none;
-	transition: all 0.2s ease-in-out;
-	&:focus {
-		border: solid 1px rgba(0, 0, 0, 0.2);
-		background-color: var(--color-faded-2);
-	}
-}
-
-.text-primary-bright {
-	color: $primaryBright !important;
-}
-.n-row {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-	&.stretch {
-		justify-content: stretch;
-	}
-	width: 100%;
-	flex-grow: 1;
-	flex-shrink: 1;
-}
-
-.btn {
-	border-radius: 12px;
-	padding-left: 1rem;
-	padding-right: 1rem;
-}
-
 .card {
 	border-radius: 1rem;
-}
-
-button:focus {
-	outline: 0 !important;
-}
-
-.btn-primary {
-	background-color: $primaryBright;
-	&:hover {
-		background-color: darken($primaryBright, 10%);
-	}
-}
-
-.btn-outline-dark {
-	border-color: var(--color-solid-2) !important;
-}
-
-.btn-light {
-	background-color: darken($faded, 6%);
-	&:hover {
-		background-color: darken($faded, 10%);
-	}
 }
 
 .mw-500px {
@@ -639,6 +94,7 @@ nav {
 	align-items: center;
 	width: 100%;
 }
+
 .main-content {
 	z-index: 0;
 	margin-bottom: 50px; // add buffer for tab bar
@@ -677,10 +133,6 @@ button {
 
 .justify-content-between {
 	justify-content: space-between;
-}
-
-.text-faded {
-	color: rgba(0, 0, 0, 0.43) !important;
 }
 
 .page {
