--- a/public/board-tabs.css
+++ b/public/board-tabs.css
@@ -3,15 +3,9 @@
   border-bottom: solid 1px var(--color-solid-2);
   width: 100%;
   min-height: 50px;
-  overflow-x: scroll;
+  box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.091);
   -webkit-overflow-scrolling: touch;
   height: 50px; }
-  .n-board-tabs .mask {
-    padding-left: 10px;
-    height: 100%;
-    width: fit-content;
-    display: flex;
-    align-content: center; }
   .n-board-tabs .tab {
     color: var(--color-inverse-2);
     border: none;
