--- a/public/main.css
+++ b/public/main.css
@@ -3691,23 +3691,23 @@ input[type="button"].btn-block {
 
 @keyframes progress-bar-stripes {
   from {
-    background-position: 1rem 0; }
+    background-position: 10px 0; }
   to {
     background-position: 0 0; } }
 
 .progress {
   display: flex;
-  height: 1rem;
+  height: 10px;
   overflow: hidden;
-  font-size: 0.75rem;
-  background-color: #e9ecef;
-  border-radius: 0.25rem; }
+  font-size: 0.8rem;
+  background-color: var(--color-faded);
+  border-radius: 10px; }
 
 .progress-bar {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: #fff;
+  color: var(--color-solid);
   text-align: center;
   white-space: nowrap;
   background-color: #20699d;
@@ -3718,7 +3718,7 @@ input[type="button"].btn-block {
 
 .progress-bar-striped {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-  background-size: 1rem 1rem; }
+  background-size: 10px 10px; }
 
 .progress-bar-animated {
   animation: progress-bar-stripes 1s linear infinite; }
