Storage on Ready
Wrapped the main user init, in a storage.onReady function. This way, different storage types can do whatever they need to do before the app will load. This could be used for bringing in pouchdb, or dropbox.

--- a/public/main.css
+++ b/public/main.css
@@ -7306,10 +7306,8 @@ select {
 
 .n-board-tabs {
   background-color: var(--color-solid);
-  border-bottom: solid 1px var(--color-solid-2);
   width: 100%;
   min-height: 50px;
-  box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.091);
   -webkit-overflow-scrolling: touch;
   height: 50px; }
   .n-board-tabs .tab {
@@ -7323,7 +7321,7 @@ select {
     flex-shrink: 0;
     height: 50px; }
     .n-board-tabs .tab.active {
-      border-bottom: solid 2px var(--color-inverse); }
+      border-bottom: solid 2px var(--color-primary-bright); }
 
 .full-screen {
   background-color: var(--color-faded-3);
