--- a/src/scss/components/board-tabs.scss
+++ b/src/scss/components/board-tabs.scss
@@ -1,10 +1,7 @@
 .n-board-tabs {
 	background-color: var(--color-solid);
-	border-bottom: solid 1px var(--color-solid-2);
 	width: 100%;
 	min-height: 50px;
-
-	box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.091);
 	-webkit-overflow-scrolling: touch;
 	height: 50px;
 
@@ -19,7 +16,7 @@
 		flex-shrink: 0;
 		height: 50px;
 		&.active {
-			border-bottom: solid 2px var(--color-inverse);
+			border-bottom: solid 2px var(--color-primary-bright);
 		}
 	}
 }
