--- a/public/main.css
+++ b/public/main.css
@@ -7104,6 +7104,7 @@ body {
   --color-red: #e94151;
   --color-tabs: var(--color-primary);
   --color-faded: rgba(0, 0, 0, 0.06);
+  --color-faded-inverse: rgba(255, 255, 255, 0.06);
   --color-faded-1: rgba(0, 0, 0, 0.1);
   --color-faded-2: rgba(0, 0, 0, 0.2);
   --color-faded-3: rgba(0, 0, 0, 0.4);
@@ -7146,6 +7147,7 @@ body.dark {
   --color-inverse-3: #666;
   --color-tabs: #000;
   --color-faded: rgba(255, 255, 255, 0.2);
+  --color-faded-inverse: rgba(0, 0, 0, 0.06);
   --color-faded-1: rgba(255, 255, 255, 0.1);
   --color-faded-2: rgba(255, 255, 255, 0.2);
   --color-faded-3: rgba(255, 255, 255, 0.4);
@@ -7380,7 +7382,7 @@ button:focus {
   position: relative;
   padding: 12px 12px 16px;
   margin: 10px;
-  border: solid 1px var(--color-solid);
+  border: solid 1px rgba(255, 255, 255, 0.3);
   color: var(--color-solid);
   transition: all 0.2s ease-in-out; }
   .btn-content:hover {
@@ -7391,7 +7393,9 @@ button:focus {
     font-size: 1rem !important;
     margin-bottom: 2px; }
   .btn-content .n-text.sm {
-    font-weight: 300;
+    font-size: 0.72rem !important;
+    line-height: 1rem !important;
+    font-weight: 200;
     opacity: 0.7; }
   .btn-content.active {
     border: none;
