--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -54,7 +54,7 @@ button:focus {
 	position: relative;
 	padding: 12px 12px 16px;
 	margin: 10px;
-	border: solid 1px var(--color-solid);
+	border: solid 1px rgba(255, 255, 255, 0.3);
 	color: var(--color-solid);
 	transition: all 0.2s ease-in-out;
 	&:hover {
@@ -67,7 +67,9 @@ button:focus {
 		margin-bottom: 2px;
 	}
 	.n-text.sm {
-		font-weight: 300;
+		font-size: 0.72rem !important;
+		line-height: 1rem !important;
+		font-weight: 200;
 		opacity: 0.7;
 	}
 	&.active {
