--- a/src/scss/components/_mini-map.scss
+++ b/src/scss/components/_mini-map.scss
@@ -37,10 +37,11 @@ body.scrolling {
 		justify-content: center;
 		align-items: center;
 		color: var(--color-inverse);
-		height: 60px;
-		border-radius: 30px;
-		width: 120px;
+		height: 50px;
+		border-radius: 25px;
+		width: 50px;
 		z-index: 2000;
+		bottom: 110px;
 	}
 	&::after {
 		content: '';
