--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -26,3 +26,22 @@
 .text-faded {
 	color: var(--color-faded);
 }
+.text-faded-1 {
+	color: var(--color-faded-1);
+}
+.text-faded-2 {
+	color: var(--color-faded-2);
+}
+.text-faded-3 {
+	color: var(--color-faded-3);
+}
+
+.text-sm {
+	font-size: 0.7rem;
+}
+.text-md {
+	font-size: 1rem;
+}
+.text-lg {
+	font-size: 1.3rem;
+}
