--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+@media (max-width: 767.98px) {
+  .container {
+    padding-left: 0 !important;
+    padding-right: 0 !important; } }
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -7255,6 +7260,24 @@ body.dark {
 .text-faded {
   color: var(--color-faded); }
 
+.text-faded-1 {
+  color: var(--color-faded-1); }
+
+.text-faded-2 {
+  color: var(--color-faded-2); }
+
+.text-faded-3 {
+  color: var(--color-faded-3); }
+
+.text-sm {
+  font-size: 0.7rem; }
+
+.text-md {
+  font-size: 1rem; }
+
+.text-lg {
+  font-size: 1.3rem; }
+
 input[type='text'],
 input[type='number'],
 input[type='password'] {
@@ -7271,6 +7294,16 @@ input[type='password'] {
   input[type='password']:focus {
     background-color: var(--color-faded-1);
     color: var(--color-inverse); }
+
+textarea.form-control {
+  background-color: var(--color-faded-1);
+  border-color: var(--color-solid-1);
+  color: var(--color-inverse-2);
+  border: none;
+  border-radius: 0.4rem;
+  padding: 6px;
+  font-size: 0.7rem;
+  color: var(--color-inverse); }
 
 select {
   -webkit-appearance: none;
@@ -7362,20 +7395,12 @@ select {
     transform: scale(1.3);
     pointer-events: none; }
 
-.btn {
-  border-radius: 12px;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  transition: all 0.2s ease-in-out;
-  display: inline-flex;
-  align-items: center;
-  vertical-align: middle;
-  justify-content: center; }
-  .btn.btn-round {
-    border-radius: 30px !important; }
-
 button:focus {
   outline: 0 !important; }
+
+.btn {
+  display: flex;
+  justify-content: center; }
 
 .btn-primary {
   background-color: var(--color-primary-bright); }
@@ -7386,14 +7411,18 @@ button:focus {
   border-color: var(--color-solid-2) !important; }
 
 .btn-white-pop {
-  color: var(--color-primary-bright) !important;
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: var(--color-inverse-2) !important;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
   border-color: var(--color-solid-2);
   background-color: var(--color-faded); }
+  .btn-white-pop.active {
+    color: var(--color-primary-bright) !important; }
   .btn-white-pop.inactive {
+    font-weight: 500;
     box-shadow: none;
     background-color: var(--color-solid);
-    color: var(--color-inverse-2) !important;
     border-color: var(--color-solid-2);
     opacity: 0.7; }
 
@@ -7446,6 +7475,32 @@ button:focus {
   background-color: var(--color-faded); }
   .btn-light:hover {
     background-color: var(--color-faded-2); }
+
+.btn-circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px !important;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  flex-grow: 0; }
+  .btn-circle.btn-primary {
+    border: none !important; }
+
+.btn.touchable {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 60px;
+  min-width: 60px;
+  margin: 10px;
+  box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.1); }
+  .btn.touchable.btn-lg, .btn-group-lg > .btn.touchable {
+    min-height: 140px;
+    min-width: 140px;
+    font-size: 3rem; }
 
 .btn-group {
   background-color: var(--color-solid-1);
@@ -7564,12 +7619,20 @@ body.scrolling .mini-map {
 
 .n-item-divider {
   min-height: 60px !important;
+  height: 30px;
   align-items: flex-end !important;
-  padding-bottom: 10px !important; }
+  padding-bottom: 10px !important;
+  background-color: transparent !important; }
   .n-item-divider.border-bottom {
     border-bottom-color: var(--color-faded) !important; }
-  .n-item-divider.compact {
-    min-height: 30px !important; }
+  .n-item-divider.compact, [item-divider],
+  .item-divider {
+    min-height: 20px !important;
+    padding-bottom: 0; }
+
+.n-list {
+  background-color: var(--color-solid);
+  margin-bottom: 16px; }
 
 .border-bottom {
   border-color: var(--color-faded-2) !important; }
