Nomie API and Fixes
Fixes

- Added "aggressive sync" option for people using multiple devices [#24]
- Default Value is now working [#31]

Enhancements

- Added Nomie API
- Added more expressive description of what was saved in the toast.

--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -1,3 +1,16 @@
+.n-item {
+	.right {
+		.zmdi {
+			font-size: 26px;
+		}
+		.btn,
+		a,
+		span {
+			font-size: 0.9rem;
+		}
+	}
+}
+
 .n-item-divider {
 	min-height: 60px !important;
 	height: 30px;
