--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -9,6 +9,12 @@
 			font-size: 0.9rem;
 		}
 	}
+	main {
+		small {
+			font-size: 0.8rem !important;
+			line-height: 0.9rem !important;
+		}
+	}
 }
 
 .n-item-divider {
