--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -1,4 +1,13 @@
 .n-item {
+	.left,
+	.right {
+		.btn-icon {
+			max-width: 26px !important;
+			width: 26px;
+			padding: 0 !important;
+			text-align: center;
+		}
+	}
 	.right {
 		.zmdi {
 			font-size: 26px;
