--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -29,7 +29,7 @@ body {
 	--color-inverse-3: #999;
 	--color-solid: #fff;
 	--color-solid-1: #eee;
-	--color-solid-2: #ccc;
+	--color-solid-2: rgb(223, 223, 223);
 	--color-solid-3: #666;
 	--color-primary: #20699d;
 	--color-primary-muted: #4d84a1;
