--- a/public/main.css
+++ b/public/main.css
@@ -7178,7 +7178,7 @@ button:focus {
     font-size: 3rem; }
 
 .btn-group {
-  background-color: var(--color-solid-1);
+  background-color: var(--color-solid-2);
   padding: 2px;
   border-radius: 12px; }
   .btn-group .btn {
@@ -7238,7 +7238,7 @@ body {
   --color-inverse-3: #999;
   --color-solid: #fff;
   --color-solid-1: #eee;
-  --color-solid-2: #ccc;
+  --color-solid-2: rgb(223, 223, 223);
   --color-solid-3: #666;
   --color-primary: #20699d;
   --color-primary-muted: #4d84a1;
