--- a/public/main.css
+++ b/public/main.css
@@ -7736,13 +7736,11 @@ nav {
 
 .main-content {
   z-index: 0;
-  margin-bottom: 50px;
   flex-grow: 1;
   flex-shrink: 1;
-  min-height: calc(100vh - 50px);
+  min-height: calc(100vh - 50px) !important;
   display: flex;
-  width: 100%;
-  background-color: var(--color-bg); }
+  width: 100%; }
 
 .clickable,
 [clickable] {
