--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -9,6 +9,7 @@ body {
 	padding: 0;
 	font-size: 18px;
 	background-color: var(--color-solid);
+	// padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 body.no-scroll {
