--- a/public/main.css
+++ b/public/main.css
@@ -7444,7 +7444,7 @@ input.form-control {
   border-color: var(--color-solid-1);
   color: var(--color-inverse-2); }
   input.form-control:focus {
-    background-color: var(--color-faded-1);
+    background-color: var(--color-faded);
     color: var(--color-inverse-2); }
 
 textarea.form-control {
@@ -7456,6 +7456,10 @@ textarea.form-control {
   padding: 6px;
   font-size: 0.7rem;
   color: var(--color-inverse); }
+  textarea.form-control:focus {
+    background-color: var(--color-faded);
+    border-color: var(--color-solid);
+    color: var(--color-inverse); }
 
 select {
   -webkit-appearance: none;
