--- a/src/scss/components/_mini-map.scss
+++ b/src/scss/components/_mini-map.scss
@@ -17,8 +17,8 @@ body.scrolling {
 	}
 
 	border-radius: 20px;
-	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-	border: solid 1px var(--color-faded-2);
+	box-shadow: 0px 4px 9px -2px rgba(0, 0, 0, 0.4);
+
 	background-color: var(--color-solid);
 	overflow: hidden;
 
