--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -21,6 +21,15 @@ body.no-scroll {
 	right: 0;
 }
 
+body.notched {
+	.notch-bottom {
+		padding-bottom: env(safe-area-inset-bottom) !important;
+	}
+	.notch-top {
+		padding-bottom: env(safe-area-inset-top) !important;
+	}
+}
+
 body {
 	--color-darkest: #fff;
 	--color-bg: #f9f9f9;
