Cleaning up search

--- a/public/main.css
+++ b/public/main.css
@@ -7416,14 +7416,17 @@ body.dark {
 .text-faded-3 {
   color: var(--color-faded-3); }
 
+.text-xs {
+  font-size: 0.5rem !important; }
+
 .text-sm {
-  font-size: 0.7rem; }
+  font-size: 0.7rem !important; }
 
 .text-md {
-  font-size: 1rem; }
+  font-size: 1rem !important; }
 
 .text-lg {
-  font-size: 1.3rem; }
+  font-size: 1.3rem !important; }
 
 input[type='text'],
 input[type='number'],
@@ -7497,14 +7500,14 @@ select {
   padding: 0px 16px;
   height: 36px;
   border: solid 1px transparent;
-  background-color: var(--color-faded);
+  background-color: var(--color-faded-1);
   color: var(--color-inverse-2);
   flex-grow: 1;
   outline: none;
   transition: all 0.2s ease-in-out; }
   .search-input:focus {
-    border: solid 1px rgba(0, 0, 0, 0.2);
-    background-color: var(--color-faded-2); }
+    border: solid 1px var(--color-faded-1);
+    background-color: var(--color-faded); }
 
 .justify-content-stretch {
   justify-content: stretch; }
