--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -36,12 +36,15 @@
 	color: var(--color-faded-3);
 }
 
+.text-xs {
+	font-size: 0.5rem !important;
+}
 .text-sm {
-	font-size: 0.7rem;
+	font-size: 0.7rem !important;
 }
 .text-md {
-	font-size: 1rem;
+	font-size: 1rem !important;
 }
 .text-lg {
-	font-size: 1.3rem;
+	font-size: 1.3rem !important;
 }
