--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -82,7 +82,7 @@ select {
 	padding: 0px 16px;
 	height: 36px;
 	border: solid 1px transparent;
-	background-color: var(--color-faded-1);
+	background-color: var(--color-faded);
 	color: var(--color-inverse-2);
 	flex-grow: 1;
 	outline: none;
