--- a/public/main.css
+++ b/public/main.css
@@ -7071,6 +7071,12 @@ a.text-dark:hover, a.text-dark:focus {
 button:focus {
   outline: 0 !important; }
 
+.btn:focus, .btn.focus {
+  box-shadow: inherit; }
+
+.btn:active {
+  background-color: var(--color-faded-1); }
+
 .btn {
   display: flex;
   justify-content: center; }
